force-app/main/default/objects/Informacion_de_finanzas__mdt/Informacion_de_finanzas__mdt.object-meta.xml
<CustomObject>
    <label>Informacion de finanzas</label>
    <pluralLabel>Informaciones de finanzas</pluralLabel>
</CustomObject>