force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/Condicion_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_pago__c</fullName>
    <label>Condición de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>