force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/Cta_Que_Cobrar__c.field-meta.xml
<CustomField>
    <fullName>Cta_Que_Cobrar__c</fullName>
    <label>Cta. Que Cobrar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>