force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>