force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Ingreso__c</fullName>
    <label>Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>