force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/Lista_de_Precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios__c</fullName>
    <label>Lista de Precios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>