force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/M_todo_de_env_o__c.field-meta.xml
<CustomField>
    <fullName>M_todo_de_env_o__c</fullName>
    <label>Método de envío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>