force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/Tipo_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pedido__c</fullName>
    <label>Tipo de Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>