force-app/main/default/objects/Informacion_de_finanzas__mdt/fields/titulo__c.field-meta.xml
<CustomField>
    <fullName>titulo__c</fullName>
    <label>titulo</label>
    <type>TextArea</type>
</CustomField>